--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,6 @@
 <body onload="startGame()">
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
 	<script src="https://www.gstatic.com/firebasejs/6.3.5/firebase-app.js"></script>
-	<script type="text/javascript" src='app/firebase.deploy.js'></script>
+	<script type="text/javascript" src='firebase.deploy.js'></script>
 </body>
 </html>
